# BFPn_GPU

./: .gitignore  CMakeLists.txt  Dockerfile.dockerfile  Makefile  README.md  STREAMING_OPTIMIZATION.md  TODO.md
BFPn_CPU_Solver/: scale_BFPn.m  serial_bfpn.cpp  新建 Microsoft Excel 工作表.xlsx
BFPn_CPU_Solver/air/: cross_total.txt  data_a.txt
BFPn_CPU_Solver/bone/: cross_total.txt
BFPn_CPU_Solver/water/: cross_total.txt  data_cross.txt
data/: README.txt  cross_total.txt  data_cross.txt
docker/: entrypoint.sh
include/: config.hpp
results/: eq15_straggling_rerun_comparison.txt
results/eq15_straggling_rerun_bone_100/: analysis.txt  command.txt
results/eq15_straggling_rerun_bone_230/: command.txt
results/eq15_straggling_rerun_water_100/: analysis.txt  command.txt
results/eq15_straggling_rerun_water_230/: analysis.txt  command.txt
results/eq15_strict_fine_bone_230/: analysis.txt
results/eq15_strict_fine_clip_bone_100/: command.txt
results/eq15_strict_fine_clip_bone_230/: command.txt
results/eq15_strict_fine_clip_water_100/: command.txt
results/eq15_strict_fine_clip_water_230/: command.txt
results/eq15_strict_fine_noclip_bone_100/: analysis.txt  (+1 more)
scripts/: analyze_idd.py  benchmark.py  convergence_order.py  entrance_idd_summary.py  fig3_fluka_reference.py  generate_test_data.py  idd_grid_sensitivity.py  paper_convergence_order.py  plot_idd_overlay.py  plot_results.py  plot_spot_planes.py  plot_table2_validation.py  plot_water230_final.py  run_benchmark.sh  run_paper_grid_clip.py  run_table2.py  table2_summary.py
src/: angle_diffusion.cu  angle_diffusion.cuh  bfpm_solver.cu  bfpm_solver.cuh  collision_integral.cu  collision_integral.cuh  energy_solver.cu  energy_solver.cuh  main.cu  spatial_transport.cu  spatial_transport.cuh  utils.cuh
(+69 files in other folders)
